--- a/.envrc
+++ b/.envrc
@@ -25,7 +25,7 @@ load_gcp_secrets() {
         echo "Warning: Failed to parse GCP secrets JSON"
       }
     else
-      echo "Warning: Failed to access GCP secret '$SECRET_NAME'"
+      echo "Warning: Failed to access GCP secret '$SECRET_NAME'. See secrets/README.md for setup."
     fi
   else
     echo "Warning: gcloud command not found, skipping GCP secrets"
