--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -143,30 +143,45 @@ jobs:
       - name: 🧶 Install node modules in root dir
         if: steps.expo-caches.outputs.yarn-workspace-hit != 'true'
         run: yarn install --frozen-lockfile
+      - name: 🖼️ Start image comparison server
+        run: |
+          mkdir -p ~/.maestro/tests
+          bun run image-comparison-server.ts > ~/.maestro/tests/screenshot-server-logs 2>&1 &
+          echo $! > /tmp/image-server.pid
+        working-directory: apps/bare-expo/e2e/_nested-flows
       - name: 🧪 Run e2e tests (bare-expo)
         run: ./scripts/start-ios-e2e-test.ts --test
         working-directory: apps/bare-expo
-        timeout-minutes: 30
+        timeout-minutes: 40
       - name: 📸 Store testing artifacts
         if: always()
         uses: actions/upload-artifact@v4
+        id: upload-artifacts
         with:
           name: bare-expo-artifacts-ios
           path: |
             ~/.maestro/tests/**/*
-            ~/Library/Logs/maestro/**/*
           overwrite: true
+      - name: 🔗 Artifacts download URL
+        if: always()
+        run: |
+          echo "Artifacts URL: ${{ steps.upload-artifacts.outputs.artifact-url }}"
       - name: 🔔 Notify on Slack
-        uses: 8398a7/action-slack@v3
+        uses: ./.github/actions/slack-notify
         if: failure() && (github.event.ref == 'refs/heads/main' || startsWith(github.event.ref, 'refs/heads/sdk-'))
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SLACK_WEBHOOK_URL: ${{ secrets.slack_webhook_ios }}
         with:
           channel: '#expo-ios'
-          status: ${{ job.status }}
-          fields: job,message,ref,eventName,author,took
-          author_name: Test Suite e2e (iOS)
+          job_name: 'Test Suite e2e (iOS)'
+          artifact_url: ${{ steps.upload-artifacts.outputs.artifact-url }}
+      - name: 🛑 Stop image comparison server
+        if: always()
+        run: |
+          if [ -f /tmp/image-server.pid ]; then
+            kill $(cat /tmp/image-server.pid) 2>/dev/null || true
+            rm -f /tmp/image-server.pid
+          fi
 
   android-build:
     runs-on: ubuntu-24.04
@@ -213,7 +228,7 @@ jobs:
       - name: 🏗️ Build Android project (bare-expo)
         run: ./scripts/start-android-e2e-test.ts --build
         working-directory: apps/bare-expo
-        timeout-minutes: 35
+        timeout-minutes: 45
         env:
           EXPO_DEBUG: 1
           NODE_ENV: production
@@ -240,7 +255,7 @@ jobs:
     runs-on: ubuntu-24.04
     strategy:
       matrix:
-        api-level: [34]
+        api-level: [36]
     steps:
       - name: 👀 Checkout
         uses: actions/checkout@v5
@@ -272,26 +287,40 @@ jobs:
         with:
           avd-api: ${{ matrix.api-level }}
           avd-name: avd-${{ matrix.api-level }}
-          script: ./scripts/start-android-e2e-test.ts --test
+          script: |
+            # Start image comparison server (needs adb)
+            mkdir -p ~/.maestro/tests
+            ./e2e/_nested-flows/image-comparison-server.ts > ~/.maestro/tests/screenshot-server-logs 2>&1 &
+            echo $! > /tmp/image-server.pid
+            # Run the actual tests
+            ./scripts/start-android-e2e-test.ts --test
           working-directory: ./apps/bare-expo
       - name: 📸 Store testing artifacts
         if: always()
+        id: upload-artifacts
         uses: actions/upload-artifact@v4
         with:
           name: bare-expo-artifacts-android
           path: |
             ~/.maestro/tests/**/*
-            ~/Library/Logs/maestro/**/*
           overwrite: true
+      - name: 🔗 Artifacts download URL
+        if: always()
+        run: |
+          echo "Artifacts URL: ${{ steps.upload-artifacts.outputs.artifact-url }}"
       - name: 🔔 Notify on Slack
-        uses: 8398a7/action-slack@v3
+        uses: ./.github/actions/slack-notify
         if: failure() && (github.event.ref == 'refs/heads/main' || startsWith(github.event.ref, 'refs/heads/sdk-'))
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SLACK_WEBHOOK_URL: ${{ secrets.slack_webhook_android }}
-          MATRIX_CONTEXT: ${{ toJson(matrix) }}
         with:
           channel: '#expo-android'
-          status: ${{ job.status }}
-          fields: job,message,ref,eventName,author,took
-          author_name: Test Suite e2e (Android)
+          job_name: 'Test Suite e2e (Android)'
+          artifact_url: ${{ steps.upload-artifacts.outputs.artifact-url }}
+      - name: 🛑 Stop image comparison server
+        if: always()
+        run: |
+          if [ -f /tmp/image-server.pid ]; then
+            kill $(cat /tmp/image-server.pid) 2>/dev/null || true
+            rm -f /tmp/image-server.pid
+          fi
