--- a/apps/minimal-tester/package.json
+++ b/apps/minimal-tester/package.json
@@ -22,7 +22,10 @@
     "expo-video": "~3.0.11",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "react-native": "0.82.0-rc.5",
+    "react-native": "0.83.0-nightly-20250930-a07308081",
+    "@react-native/assets-registry": "0.83.0-nightly-20250930-a07308081",
+    "@react-native/dev-middleware": "0.83.0-nightly-20250930-a07308081",
+    "@react-native/babel-preset": "0.83.0-nightly-20250930-a07308081",
     "react-native-web": "~0.21.0"
   },
   "devDependencies": {
