--- a/packages/@expo/log-box/tsconfig.json
+++ b/packages/@expo/log-box/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "expo-module-scripts/tsconfig.base",
   "compilerOptions": {
-    "noEmit": true
+    "noEmit": true,
   },
-  "include": ["./src", "./app", "App.tsx", "index.ts"],
+  "include": ["./src", "./app"],
   "exclude": ["**/__mocks__/*", "**/__tests__/*"]
 }
